further trained the model

--- a/results/pbrs_v3_eyes/configuration.yaml
+++ b/results/pbrs_v3_eyes/configuration.yaml
@@ -69,7 +69,7 @@ checkpoint_settings:
   run_id: pbrs_v3_eyes
   initialize_from: null
   load_model: false
-  resume: false
+  resume: true
   force: false
   train_model: false
   inference: false
